test/sema/gc/generic_template_args.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo<T>(t: *T) {}

fn bar<T>(t: *mut T) {}

fn main() {
  // CHECK: [[# @LINE + 1 ]]:7: error: cannot unify '*mut number' with '*_'
  foo(gcMut(123));

  // CHECK: [[# @LINE + 1 ]]:7: error: cannot unify '*number' with '*mut _'
  bar(gc(123));
}
